--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotaconstants": "^7.13.0",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
